# kastane_x_compiler

./: .clang-format  .clang-tidy  .clangd  .gitignore  .header.nvim  CMakeLists.txt  Doxyfile.in  README.md  dev.sh
apps/kasx/: CMakeLists.txt
apps/kasx/src/: Main.cpp
apps/kasx/src/cli/: ArgsParser.cpp  ArgsParser.hpp  CompiledArgument.hpp
apps/kasx/src/core/: ApplicationManager.cpp  ApplicationManager.hpp  Execution.hpp  VersionPrinter.cpp  VersionPrinter.hpp
apps/kasx/src/io/: FileHandler.cpp  FileHandler.hpp
cmake/: Antlr.cmake  AntlrInstall.cmake  AntlrJar.cmake  Doxygen.cmake  GitVersioning.cmake  LazLogger.cmake  Logger.cmake
libs/kasx_lib/: CMakeLists.txt
libs/kasx_lib/grammar/: KasX.g4
libs/kasx_lib/include/kasx/: Domain.hpp  KasXCompiler.hpp  Types.hpp
libs/kasx_lib/include/kasx/core/logging/: TraceableClass.hpp
libs/kasx_lib/include/kasx/core/scopes/: GlobalScope.hpp
libs/kasx_lib/include/kasx/data_structures/declarations/: Declaration.hpp  DeclarationTypes.hpp  EntityDeclaration.hpp  FluentDeclaration.hpp  Traceable.hpp  TypeDeclaration.hpp
libs/kasx_lib/include/kasx/data_structures/declarations/helpers/: FunctionHeader.hpp  Parameter.hpp
libs/kasx_lib/include/kasx/data_structures/expressions/: Expression.hpp  ExpressionTypes.hpp
libs/kasx_lib/include/kasx/data_structures/grounded/: GroundedFluent.hpp
libs/kasx_lib/include/kasx/data_structures/state/: InitialState.hpp
libs/kasx_lib/include/kasx/debug/: DomainFileTrace.hpp
libs/kasx_lib/include/kasx/visitors/: ProgramVisitor.hpp
libs/kasx_lib/src/: KasXCompiler.cpp
libs/kasx_lib/src/core/: ActionScope.cpp  ActionScope.hpp  Domain.cpp  Domain.hpp  GlobalScope.cpp  GlobalScope.hpp  Scope.cpp  Scope.hpp
libs/kasx_lib/src/core/logging/: TraceableClass.hpp
libs/kasx_lib/src/core/scopes/: GlobalScope.cpp  GlobalScope.hpp  Scope.cpp  Scope.hpp
libs/kasx_lib/src/core/services/: IDHandler.cpp  IDHandler.hpp
libs/kasx_lib/src/data_structures/: Declaration.cpp  Definition.cpp  Definition.hpp  DefinitionTypes.hpp  Entity.hpp  EntityDecl.hpp  Fluent.hpp  FluentDecl.hpp  GroundedFluent.cpp  InitialFluent.hpp  Parameter.cpp  Type.hpp  TypeDecl.hpp  TypeDeclaration.cpp
libs/kasx_lib/src/data_structures/declarations/: Declaration.hpp  DeclarationTypes.hpp  EntityDecl.hpp  FluentDecl.hpp  TypeDecl.hpp
libs/kasx_lib/src/data_structures/expressions/: Expression.hpp  ExpressionTypes.hpp  Fluent.hpp
libs/kasx_lib/src/data_structures/expressions/data_types/: IdentifierPointer.hpp  NullValue.hpp  NumberValue.hpp  UnknownValue.hpp
libs/kasx_lib/src/data_structures/expressions/operations/: BinaryOperation.hpp  BinaryOperationTypes.hpp  NotOperation.hpp  UnaryOperation.hpp
libs/kasx_lib/src/data_structures/grounded/: GroundedExpression.hpp  GroundedExpressionTypes.hpp
libs/kasx_lib/src/data_structures/helpers/: FunctionHeader.hpp  Parameter.hpp
libs/kasx_lib/src/visitors/: AntlrSafeBase.hpp  AntlrSafeRuntime.hpp  ProgramVisitor.cpp  ProgramVisitor.hpp
libs/kasx_lib_old/: CMakeLists.txt
libs/kasx_lib_old/grammar/.antlr/: KasX.interp  KasXBaseListener.java  KasXLexer.interp  KasXLexer.java  KasXLexer.tokens  KasXListener.java  KasXParser.java
libs/kasx_lib_old/include/kasx/: KasXCompiler.hpp  Types.hpp
libs/kasx_lib_old/src/core/: ActionScope.hpp  Domain.cpp  Domain.hpp  GlobalScope.cpp  GlobalScope.hpp  Scope.cpp  Scope.hpp  TraceableClass.hpp
libs/kasx_lib_old/src/data_structures/declarations/: ActionDecl.hpp  DeclarationTypes.hpp
libs/kasx_lib_old/src/data_structures/expressions/: ExpressionTypes.hpp
libs/kasx_lib_old/src/data_structures/expressions/data_types/: UnknownValue.hpp
libs/kasx_lib_old/src/data_structures/expressions/operations/: UnaryOperation.hpp  UnaryOperationTypes.hpp
libs/kasx_lib_old/src/data_structures/grounded/: GroundedFluent.hpp
libs/kasx_lib_old/src/trace/: Range.hpp
libs/kasx_lib_old/src/visitors/: AntlrSafeRuntime.hpp
tests/modules/: 01.sabre  02.sabre  03.sabre  04.sabre  05.sabre
